--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,5 @@ jobs:
           command: coverage run -m unittest && coverage xml && coverage report -m
       - run:
           name: Upload CodeClimate coverage report
-          command: |
-            ./cc-test-reporter after-build
+          command: ./cc-test-reporter after-build
+            
